Fixed a bug where horizontal scroll bar appeared

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  padding: 0;
+  margin: 0;
+}
 
 @font-face {
   font-family: 'minecraft';
